# mechanization

./: .gitignore  0_pen_paper.tex  1_coherence_depth – Gemini.tex  1_coherence_depth.pdf.txt  1_coherence_depth.tex  2_generative_calculus.tex  3_automated_theory_synthesis.tex  CLAIMS_EVIDENCE.md  CLAUDE.md  CODEBASE_GUIDE.md  Coherence_Window_Theorem_Work.md  Coherence_Window_Theorem_draft.md  DCT.aux  DCT.out  DCT.tex  DCT.toc  DCT_research_plan.md  Holographic neccesity,md.txt  ISSUE_QUEUE.md  MBTT_FIRST_AUTONOMOUS_SYNTHESIS_ROADMAP.md  Nu_Convergence_Test_Design.md  PEN_Maximum_Impact_Plan.md  Phase2_Session_Notes.md  Phase2_progress_report.md  README.md  README_zenodo.md  active_contexts_dormant_weights.tex  active_contexts_refs.bib  agda.md  agda_file.md  algorithmic_big_bang.tex  architecture_of_genesis.tex  automated_theory_synthesis_jar_refs.bib  checklist.md  coherence_depth_mechanization_plan.md  coherence_depth_mechanization_progress.md  coherence_depth_refs.bib  coherence_depth_review.md  coherence_windows_foundational_trajectories.tex  dark_sector.tex  (+81 more)
.github/workflows/: pen-engine.yml
Haskell/: HodgeEndomorphism.hs  MinimalAction.hs
agda/: OpSchema.agda  PEN.agda  Pen nu research plan.md  README.md  instructions.md  library_manifest.json  pen.agda-lib  progress_tracking.md
agda/Adjunction/: AdjunctionDepth.agda  TriangleIdentity.agda
agda/CaseStudies/: Common.agda  GlobalModality.agda  PromotedInterface.agda  SparseDatatype.agda  UniverseExtension.agda
agda/Core/: AffineRecurrence.agda  DepthOneAffine.agda  Nat.agda  Sequence.agda
agda/Experiments/: CircleElim.agda  DepthThreeAttempt.agda  HopfTrace.agda  SphereElim.agda  TorusElim.agda
agda/Geometry/: Clutching.agda  HopfCeiling.agda
agda/Logic/: ModalCollapse.agda
agda/Metatheory/: ActiveBasisContract.agda  AdjunctionBarrier.agda  CanonicalTelescope.agda  CanonicityDensity.agda  ChronologicalWindow.agda  ComputationalReplacement.agda  ExactDepth.agda  Extensional.agda  FiniteInterfaceBasis.agda  FullCouplingEnvelope.agda  GlobalActionSemantics.agda  InterfaceCalculus.agda  KanSubsumption.agda  MuInvariance.agda  Obligations.agda  PresentationEquivalence.agda  RawStructuralSyntax.agda  RawStructuralTyping.agda  Refactoring.agda  SparseDependencyRecurrence.agda  SurfaceNormalizationBridge.agda  SurfaceToHornImage.agda  TraceCostNormalForm.agda  TracePrinciple.agda  TwoDFoundations.agda  TwoLTTFoundations.agda  UniversalRecurrence.agda  UpperBound.agda
agda/ObligationGraph/: Interface.agda  Recurrence.agda
agda/OpSchema/: Core.agda  Enumerate.agda  Novel.agda  Realize.agda
agda/Oracle/: Efficiency.agda  Kappa.agda  Nu.agda
agda/Saturation/: AbstractionBarrier.agda  AbstractionBarrier9.agda  Axiom.agda  CellPresentation.agda  Decomposition.agda  (+3 more)
docs/: architecture.md  coherence_depth_trust_boundary.md  phase1_evidence_contract.md  theorem_index.md
engine/: abhelp.txt  abhelp2.txt  pen-engine.cabal  phaseB_iter1_prefix.csv  phaseB_iter1_steps.csv  phaseC_plan_probe_prefix.csv  phaseC_plan_probe_steps.csv  phaseC_prefix.csv  phaseC_run2_steps.csv  policy_prefix7.csv  prefix_after_bridge_first.csv  prefix_after_obligation_fix.csv  prefix_after_patch.csv  prefix_after_path_guard.csv  prefix_after_stalled_closed.csv  prefix_after_tiebreak_refcount.csv  prefix_check7.csv  prefix_diag_fix2_step6.csv  prefix_diag_fix2_step7.csv  prefix_diag_fix3_step6.csv  prefix_diag_fix3_step7.csv  prefix_diag_fix4_step6.csv  prefix_diag_fix5_step6.csv  prefix_diag_fix5_step7.csv  prefix_diag_fix_paper_step6.csv  prefix_diag_fix_step6.csv  prefix_diag_fix_step7.csv  prefix_diag_legacy_step6.csv  prefix_diag_paper_step6.csv  prefix_impl123_step7.csv  prefix_phaseB_iter2.csv  prefix_phaseB_iter3.csv  prefix_phaseB_iter4.csv  prefix_phaseB_iter5.csv  prefix_phaseB_iter6.csv  prefix_step6_latency_tuned.csv  prefix_step7_check.csv  prefix_step7_latency_final.csv  probe_step15.ghci  probe_step15_exact.ghci  (+22 more)
engine/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
engine/dist-newstyle/packagedb/ghc-9.6.7/: package.cache  pen-engine-0.1.0.0-inplace.conf
engine/scripts/: check_no_conflict_markers.sh  check_phase1_manifest_schema.sh  check_phase1_repo_hygiene.sh  check_phase1_workflow_consistency.sh  check_phase3_native_nu_fixtures.sh  check_phase5_decode_fixtures.sh  check_phase5_decode_non_interference.sh  check_phase6_agda_harness.sh  check_phase6_bridge_schema.sh  check_phase6_verification_split.sh  check_phase7_ci_migration.sh  check_phase7_default_mode.sh  check_phase7_pruning_signoff.sh  clean_phase1_artifacts.sh  run_phase1_evidence_bundle.sh  run_phase1_shadow.sh  run_phase1_shadow_ladder.sh  run_phase2_canonical_differential.sh  run_phase2_quality_parity.sh  run_phase3_native_nu_evidence.sh  run_prefix_regression.sh  run_structural_prefix_perf.sh  start_phase1_iteration.sh  summarize_phase1_evidence.sh  test_phase1_evidence_tools.sh  verify_phase1_evidence.sh
engine/src/: AbInitioPolicy.hs  AcceptanceSuite.hs  AdjunctionDetect.hs  AgdaExport.hs  AgendaSearch.hs  Capability.hs  Cluster.hs  CoherenceWindow.hs  Enumerate.hs  Equivalence.hs  ExactNu.hs  Generator.hs  GenuineNu.hs  HITEnum.hs  Independence.hs  InferenceNu.hs  Inhabitation.hs  KappaNu.hs  Kolmogorov.hi  Kolmogorov.hs  MBTTCanonical.hs  MBTTDecode.hs  MBTTEnum.hs  MBTTNu.hs  MCTS.hs  Main.hs  Manifest.hs  Parallel.hs  ProofRank.hs  ProofState.hs  RunAbInitio.hs  RunAcceptance.hs  RunAcceptanceCore.hs  RunAcceptanceMBTT.hs  RunAgdaBridge.hs  RunDCTAudit.hs  RunFilteredK.hs  RunInferenceNu.hs  RunKHorizon.hs  RunKolmogorov.hs  (+16 more)
engine/testdata/phase3_native_nu/: fixtures.json  fixtures.sha256
engine/testdata/phase5_decode/: fixtures.sha256  fixtures.tsv
runs/: strict_prefix_review.csv  v123_analysis.csv
scripts/: benchmark.sh  check_coherence_depth_artifact.sh  coherence_depth_audit.py  compare_runs.sh  gen_latex_table.sh  repro_ab_initio.sh  run_missing_schemas_pipeline.py  run_review_hardening_ablations.py  run_scalar_api_completeness.py  run_v123_analysis.py
(+191 files in other folders)
