cabal-version:      2.4
name:               pen-engine
version:            0.1.0.0
synopsis:           PEN Information-Theoretic Engine
description:        Computes Kolmogorov complexity (kappa) and Shannon surprise (nu)
                    for the Genesis sequence of mathematical structures in HoTT.
license:            MIT
author:             PEN Research
maintainer:         pen@example.com
category:           Math
build-type:         Simple

executable pen-engine
    main-is:          Main.hs
    other-modules:    Types
                    , Inhabitation
                    , Enumerate
                    , KappaNu
                    , ProofRank
                    , Cluster
                    , Manifest
                    , Simulation
                    , Capability
                    , Equivalence
                    , Independence
                    , HITEnum
                    , TheoryState
                    , Generator
                    , GenuineNu
                    , Synthesis
                    , CoherenceWindow
                    , ExactNu
                    , Parallel
                    , UniformNu
                    , InferenceNu
                    , AdjunctionDetect
                    , Kolmogorov
    build-depends:    base ^>=4.14 || ^>=4.15 || ^>=4.16 || ^>=4.17 || ^>=4.18 || ^>=4.19
                    , aeson
                    , bytestring
                    , containers
                    , directory
                    , parallel
                    , deepseq
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N8"

executable k-horizon
    main-is:          RunKHorizon.hs
    other-modules:    Types
                    , Inhabitation
                    , Enumerate
                    , KappaNu
                    , ProofRank
                    , Cluster
                    , Independence
                    , HITEnum
                    , ExactNu
    build-depends:    base ^>=4.14 || ^>=4.15 || ^>=4.16 || ^>=4.17 || ^>=4.18 || ^>=4.19
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -O2

executable filtered-k
    main-is:          RunFilteredK.hs
    other-modules:    Types
                    , Inhabitation
                    , Enumerate
                    , KappaNu
                    , ProofRank
                    , Cluster
                    , Independence
                    , HITEnum
                    , ExactNu
                    , Equivalence
    build-depends:    base ^>=4.14 || ^>=4.15 || ^>=4.16 || ^>=4.17 || ^>=4.18 || ^>=4.19
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -O2

executable phase-m
    main-is:          RunPhaseM.hs
    other-modules:    Types
                    , Inhabitation
                    , Enumerate
                    , KappaNu
                    , ProofRank
                    , Cluster
                    , Independence
                    , HITEnum
                    , ExactNu
    build-depends:    base ^>=4.14 || ^>=4.15 || ^>=4.16 || ^>=4.17 || ^>=4.18 || ^>=4.19
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -O2

executable dct-audit
    main-is:          RunDCTAudit.hs
    other-modules:    Types
                    , Inhabitation
                    , Enumerate
                    , ProofRank
                    , Equivalence
                    , Independence
                    , UniformNu
    build-depends:    base ^>=4.14 || ^>=4.15 || ^>=4.16 || ^>=4.17 || ^>=4.18 || ^>=4.19
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -O2

executable inference-nu
    main-is:          RunInferenceNu.hs
    other-modules:    Types
                    , Inhabitation
                    , Enumerate
                    , ProofRank
                    , Equivalence
                    , Independence
                    , UniformNu
                    , InferenceNu
    build-depends:    base ^>=4.14 || ^>=4.15 || ^>=4.16 || ^>=4.17 || ^>=4.18 || ^>=4.19
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -O2

executable uniform-nu
    main-is:          RunUniformNu.hs
    other-modules:    Types
                    , Inhabitation
                    , Enumerate
                    , ProofRank
                    , Equivalence
                    , Independence
                    , UniformNu
                    , Parallel
    build-depends:    base ^>=4.14 || ^>=4.15 || ^>=4.16 || ^>=4.17 || ^>=4.18 || ^>=4.19
                    , containers
                    , parallel
                    , deepseq
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N8"

library
    exposed-modules:  Types
                    , Inhabitation
                    , Enumerate
                    , KappaNu
                    , ProofRank
                    , Cluster
                    , Manifest
                    , Simulation
                    , Capability
                    , Equivalence
                    , Independence
                    , HITEnum
                    , TheoryState
                    , Generator
                    , GenuineNu
                    , Synthesis
                    , CoherenceWindow
                    , ExactNu
                    , Parallel
                    , UniformNu
                    , InferenceNu
                    , AdjunctionDetect
                    , Kolmogorov
                    , Telescope
                    , TelescopeGen
                    , TelescopeEval
                    , TelescopeCheck
                    , MCTS
    build-depends:    base ^>=4.14 || ^>=4.15 || ^>=4.16 || ^>=4.17 || ^>=4.18 || ^>=4.19
                    , aeson
                    , bytestring
                    , containers
                    , parallel
                    , deepseq
                    , random
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -O2

executable ab-initio
    main-is:          RunAbInitio.hs
    other-modules:    Types
                    , Inhabitation
                    , Enumerate
                    , ProofRank
                    , Equivalence
                    , Independence
                    , UniformNu
                    , CoherenceWindow
                    , Kolmogorov
                    , Telescope
                    , TelescopeGen
                    , TelescopeEval
                    , TelescopeCheck
                    , MCTS
    build-depends:    base ^>=4.14 || ^>=4.15 || ^>=4.16 || ^>=4.17 || ^>=4.18 || ^>=4.19
                    , containers
                    , random
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N8"

executable kolmogorov-audit
    main-is:          RunKolmogorov.hs
    other-modules:    Kolmogorov
                    , KappaNu
                    , Types
                    , Inhabitation
                    , Enumerate
                    , ProofRank
                    , Cluster
                    , Independence
                    , HITEnum
                    , ExactNu
                    , Equivalence
    build-depends:    base ^>=4.14 || ^>=4.15 || ^>=4.16 || ^>=4.17 || ^>=4.18 || ^>=4.19
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -O2
